layout changes in experience

--- a/index.html
+++ b/index.html
@@ -90,51 +90,49 @@
   <section class="experience" id="experience">
     <div class="container">
       <h2>EXPERIENCE</h2>
-      <div class="experience-list">
-        <article>
-          <h3 class="title">Cybersecurity Engineer</h3>
-          <h3 class="subtitle">Toshiba Global Commerce Solution, May 2024 - Dec 2024</h3>
-          <p>
-            Conducted penetration testing on over 25 web applications, identifying 50+ critical vulnerabilities 
-            and reducing potential incidents significantly. Automated security processes, integrated advanced tools, 
-            and improved operational efficiency to streamline testing and ensure robust protection. Contributed to 
-            security architecture reviews across multiple projects, enhancing compliance and documenting vulnerabilities. 
-            Collaborated with agile teams to design and implement security-focused systems, ensuring alignment with 
-            business goals while staying ahead of emerging cybersecurity threats.
-          </p>
-        </article>
-        <article>
-          <h3 class="title">Cybersecurity Analyst Intern</h3>
-          <h3 class="subtitle">Langan Engineering and Environmental Services, Sept 2023 - May 2024</h3>
-          <p>
-            Enhanced enterprise security at Langan by conducting vulnerability assessments and penetration tests 
-            across 18 internal systems and web applications, reducing system vulnerabilities by 45%. Contributed 
-            to the development of NIST-27001-compliant documentation and enterprise security standards. Implemented 
-            YARA scripts to improve phishing detection accuracy and response times while integrating advanced tools 
-            like Cisco AMP, Mimecast, Arctic Wolf, and Burp Suite to strengthen security operations.
-          </p>
-        </article>
-        <article>
-          <h3 class="title">Research Assistant</h3>
-          <h3 class="subtitle">Rochester Institute of Technology, Jan 2023 - Aug 2023</h3>
-          <p>
-            Applied deep knowledge of security and privacy standards, including NIST SP 800-53, NIST SP 800-30, and 
-            ISO/IEC 27001, to ensure regulatory compliance. Skilled in conducting comprehensive risk assessments to 
-            identify, analyze, and mitigate potential risks while implementing effective controls. Leveraged industry 
-            best practices to align security and compliance efforts with organizational goals.
-          </p>
-        </article>
-        <article>
-          <h3 class="title">Security Operational Analyst (SOC)</h3>
-          <h3 class="subtitle">RNS Technology, June 2021 - July 2022</h3>
-          <p>
-            Monitored over 100 security devices and intrusion detection systems, identifying and mitigating 100+ critical 
-            incidents to enhance enterprise system security. Assessed and responded to 200+ threat alerts, conducting root 
-            cause analysis and recommending remediation actions to protect data integrity. Utilized advanced tools such as 
-            Falcon CrowdStrike, Nmap, AlienVault, and LogRhythm to analyze network traffic and detect compromises, while 
-            implementing preventive measures to reduce organizational impact and safeguard infrastructure.
-          </p>
-        </article>
+      <div class="timeline-container">
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="year">June 2021 - July 2022</div>
+            <div class="content">
+              <h3>Security Operational Analyst (SOC)</h3>
+              <h4>RNS Technology</h4>
+              <p>
+                Monitored 100+ security devices, responded to threat alerts, and conducted root cause analyses to enhance system security and data integrity.
+              </p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="year">Jan 2023 - Aug 2023</div>
+            <div class="content">
+              <h3>Research Assistant</h3>
+              <h4>Rochester Institute of Technology</h4>
+              <p>
+                Applied knowledge of security standards, including NIST SP 800-53 and ISO/IEC 27001, conducting risk assessments and implementing controls to mitigate risks effectively.
+              </p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="year">Sep 2023 - May 2024</div>
+            <div class="content">
+              <h3>Cybersecurity Analyst Intern</h3>
+              <h4>Langan Engineering and Environmental Services</h4>
+              <p>
+                Conducted vulnerability assessments and penetration tests across 18 internal systems, contributing to enterprise security and developing NIST-27001-compliant documentation.
+              </p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="year">May 2024 - Dec 2024</div>
+            <div class="content">
+              <h3>Cybersecurity Engineer Intern</h3>
+              <h4>Toshiba Global Commerce Solution</h4>
+              <p>
+                Conducted penetration testing on over 25 web applications, identifying critical vulnerabilities, automating processes, and improving operational efficiency.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
