--- a/index.html
+++ b/index.html
@@ -140,23 +140,67 @@
   <!-- PROJECTS SECTION -->
   <section class="projects" id="projects">
     <div class="container">
-      <h2>PROJECTS</h2>
-      <p class="section-intro">
-        Below are some of my personal and professional projects showcasing my engineering prowess.
+      <h2 class="section-title">Projects</h2>
+      <p class="section-subtitle">
+        Every project is a unique endeavor. See what I have accomplished so far!
       </p>
-       Work in Progress
-      <!-- <div class="projects-grid">
+      <div class="projects-grid">
+        <!-- Project Card 1 -->
         <div class="project-card">
-          <h3>Project One</h3>
-          <p>Short description of the project.</p>
-          <a href="#" class="btn small">View Project</a>
+            <a href="">
+            <h5 class="project-title">Phish Analyzer Tool</h5> </a>
+            <p class="project-description">
+              A patented desktop application designed to analyze and secure against phishing emails, featuring sandbox configurations, advanced security mechanisms, and a user-friendly interface to enhance threat detection and response.
+            </p>   
         </div>
+        <!-- Project Card 2 -->
         <div class="project-card">
-          <h3>Project Two</h3>
-          <p>Short description of the project.</p>
-          <a href="#" class="btn small">View Project</a>
-        </div> -->
-        <!-- Add more project cards as needed -->
+          <a href="">
+          <h5 class="project-title">Secure Communication Using Image Exif Data</h5> </a>
+          <p class="project-description">
+            Explored the innovative use of image Exif data for covert communication. Developed methodologies for securely embedding and transmitting sensitive information through image metadata.
+          </p>   
+      </div>
+        <!-- Project Card 3 -->
+        <div class="project-card">
+          <a href="">
+          <h5 class="project-title">Architecture and Advancement in Virtualization of TPM</h5> </a>
+          <p class="project-description">
+            Explored the architecture and advancements of virtual Trusted Platform Modules (vTPMs) in virtual and cloud environments. The project highlighted security flaws, key-sharing mechanisms, and the migration challenges associated with vTPMs, proposing solutions for enhanced security and trust in virtualization.
+          </p>   
+      </div>
+       <!-- Project Card 4 -->
+       <div class="project-card">
+        <a href="">
+        <h5 class="project-title">Secure Communication Using Image Exif Data</h5> </a>
+        <p class="project-description">
+          Explored the innovative use of image Exif data for covert communication. Developed methodologies for securely embedding and transmitting sensitive information through image metadata.
+        </p>   
+    </div>
+     <!-- Project Card 5-->
+     <div class="project-card">
+      <a href="">
+      <h5 class="project-title">Quantum Key Distribution</h5> </a>
+      <p class="project-description">
+        This project delves into the rapidly evolving field of quantum cryptography, focusing on Quantum Key Distribution (QKD). It explores innovative methods to increase QKD transmission distance while maintaining secure data transmission, addressing challenges such as key generation rates, distance limitations, and potential vulnerabilities.
+      </p>   
+  </div>
+  <!-- Project Card 6-->
+  <div class="project-card">
+    <a href="">
+    <h5 class="project-title">SecTool: The Comprehensive Cybersecurity Toolkit</h5> </a>
+    <p class="project-description">
+      SecTool is a versatile cybersecurity toolkit with features like keylogging, OSINT, payload generation, hash cracking, network analysis, social engineering tools, web vulnerability detection, and more. It’s a comprehensive solution for security testing and digital defense.
+    </p>   
+</div>
+<!-- Project Card 7-->
+<div class="project-card">
+  <a href="">
+  <h5 class="project-title">Website Crawler</h5> </a>
+  <p class="project-description">
+    A lightweight and efficient web crawler designed to scrape, analyze, and extract data from websites, enabling seamless data collection for various use cases.
+  </p>   
+</div>
       </div>
     </div>
   </section>
