--- a/blogs.html
+++ b/blogs.html
@@ -55,6 +55,15 @@
   <section class="blog-list-section">
     <div class="container text-center">
       <article class="blog-card">
+        <a href="firmware_llm_annotator.html"><h2 class="blog-title">Firmware Exploration: LLM as Your Annotator</h2></a>
+          <p class="blog-excerpt">
+            How to use an LLM as a helper for firmware reversing: triaging strings, summarizing decompiled functions, and annotating config blobs while you stay in control of the analysis.
+          </p>
+          <p class="blog-meta">
+            <span>October 31, 2024</span> · <span>5 min read</span>
+          </p>
+      </article>
+      <article class="blog-card">
         <a href="1001.html"><h2 class="blog-title">CVE-2024–1001</h2></a>
           <p class="blog-excerpt">
             Kubernetes relies heavily on Role-Based Access Control (RBAC) to manage permissions. However, in early 2024, CVE-2024–1001 was disclosed, revealing how misconfigured RBAC rules in Kubernetes could allow attackers to gain full control over a cluster. This vulnerability emphasizes the risks of poorly defined access policies.
