Deploy React build

--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/images/heading_image.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hem Parekh | Portfolio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha512-P1gywDxRdjz+MfI5LZaLo19tA/HZ0m+HaY/fk06r8jyM2xBm27JmyyxI+4KE9ErA+H4bkMl7nzE5F2Tg9M1VDg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   </head>
   <body>
     <div id="root"></div>
